@@ -2,6 +2,7 @@ package br.com.dbc.vemser.checkout.security;
 
 import br.com.dbc.vemser.checkout.entities.Role;
 import br.com.dbc.vemser.checkout.entities.Usuario;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
@@ -11,12 +12,15 @@ import org.springframework.security.authentication.UsernamePasswordAuthenticatio
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class TokenService {
+    private final ObjectMapper objectMapper;
     private static final String TOKEN_PREFIX = "Bearer";
     private static final String ROLES_CLAIM = "roles";
     @Value("${jwt.expiration}")
@@ -29,7 +33,8 @@ public class TokenService {
         Date now = new Date();
         Date exp = new Date(now.getTime() + Long.parseLong(expiration));
 
-        Role roles = usuario.getRole();
+        List<String> roles = new ArrayList<>();
+                roles.add(usuario.getRole().getAuthority());
 
         return TOKEN_PREFIX + " " +
                 Jwts.builder()
@@ -53,9 +58,9 @@ public class TokenService {
                 List<String> cargos = body.get(ROLES_CLAIM, List.class);
                 List<SimpleGrantedAuthority> authorities = cargos.stream()
                         .map(SimpleGrantedAuthority::new)
-                        .toList();
+                        .collect(Collectors.toList());
                 UsernamePasswordAuthenticationToken usernamePasswordAuthenticationToken =
-                        new UsernamePasswordAuthenticationToken(user, null, authorities);
+                        new UsernamePasswordAuthenticationToken(user,null,authorities);
                 return usernamePasswordAuthenticationToken;
             }
         }
